--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<%= I18n.locale %>">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title><%= @title %> - <%= APP_CONFIG[:project_name] %></title>
@@ -11,12 +11,17 @@
   <body>
     <div id="wrapper">
     <div id="header">
-      <h1 class="right"><%= APP_CONFIG[:project_name] %></h1>
+      <!-- <h1 class="right"><%= APP_CONFIG[:project_name] %></h1> -->
+      <ul class="right">
+        <li><a href="<%= url_for :locale => 'es' %>">Español</a></li>
+        <li><a href="<%= url_for :locale => 'en' %>">English</a></li>
+        <li><a href="<%= url_for :locale => 'fr' %>">Français</a></li>
+      </ul>
       <h1><a href="/"><%= APP_CONFIG[:project_name] %></a></h1>
     </div><!-- header -->
     <ul id="nav">
       <li><a href="/"><%= t(:home) %></a></li>
-      <li><a href="#"><%= t(:send_message) %></a></li>
+      <li><%= link_to t(:send_message), message_index_path %></li>
       <li><a href="#"><%= t(:integration) %></a></li>
       <li><a href="#"><%= t(:stats) %></a></li>
     </ul>
