--- a/app/views/message/index.html.erb
+++ b/app/views/message/index.html.erb
@@ -1,6 +1,6 @@
 <% @title = t(:send_message) %>
 
-<h2><%= link_to t(:send_message), message_index_path %></h2>
+<h2><%= link_to t(:send_message), message_path %></h2>
 
 <%= render :partial => 'flash_messages' %>
 
