--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,17 +21,17 @@
     </div><!-- header -->
     <ul id="nav">
       <li><a href="/"><%= t(:home) %></a></li>
-      <li><%= link_to t(:send_message), message_index_path %></li>
-      <li><a href="#"><%= t(:integration) %></a></li>
-      <li><a href="#"><%= t(:stats) %></a></li>
+      <li><%= link_to t(:send_message), message_path %></li>
+      <li><%= link_to t(:integration), integrate_path %></li>
+      <li><%= link_to t(:stats), stats_path %></li>
     </ul>
     <div class="clear" />
     <div id="content">
       <%= yield %>
     </div><!-- content -->
     <div id="footer">
-      <p>Developed by Luther Blisset.<br />
-      &copy; <%= t(:all_rights_reserved) %>.</p>
+      <p>Developed by Luther Blisset<br />
+      &copy; <%= t(:all_rights_reserved) %></p>
     </div>
   </div>
   </body>
