mejorando el interfaz en francés

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       <%= yield %>
     </div><!-- content -->
     <div id="footer">
-      <p>Developed by Luther Blisset<br />
+      <p><%= t(:developed_by) %> Luther Blisset<br />
       &copy; <%= t(:all_rights_reserved) %></p>
     </div>
   </div>
