--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@
       <%= yield %>
     </div><!-- content -->
     <div id="footer">
-      <p><%= t(:developed_by) %> Luther Blisset<br />
-      &copy; <%= t(:all_rights_reserved) %></p>
+      <p><%= t(:developed_by) %> Isaac Hacksimov<br />
+      <%= t(:licensed_under) %> <%= link_to "GNU Affero", "http://www.gnu.org/licenses/agpl.html" %>. <%= link_to t(:git_repo), 'https://github.com/apardo/sahara' %>.</p>
     </div>
   </div>
   </body>
