Portada en ingles y espanyol

--- a/app/views/site/index.es.html.erb
+++ b/app/views/site/index.es.html.erb
@@ -1,6 +1,24 @@
 <% @title = t(:home) %>
 
 <h2><%= link_to t(:introduction), root_url %></h2>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+<p>El día diez de octubre comenzó una gran protesta pacífica, en la que más de 20.000 saharauis reivindicaban su derecho al trabajo, a la no discriminación y al usufructo de sus recursos naturales, estableciendo un campamento de 7000 haimas a 15 kilómetros de la ciudad de El Aaiún. 30 días después el gobierno de Marruecos ordenó a su ejército  el asalto y la destrucción del campamento saharaui de Agdaym Iziken. Ha habido 11 personas muertas, 723 heridas y 159 desaparecidas, sin contar a quienes se encuentran en los cuarteles militares o la cárcel, ni en los hospitales.</p>
+
+<p>Al mismo tiempo, las fuerzas de ocupación han instigado y armado a colonos de la ciudad de El Aaiún que, junto a policías de paisano, asaltan domicilios, negocios y queman vehículos de propiedad  saharaui. El ejército marroquí ha declarado el Estado de sitio en los Territorios Ocupados del Sáhara Occidental.</p>
+
+<p>No existe la opción del silencio como no existe la posibilidad de parar las justas demandas del pueblo saharaui. Lo que sí existe es la posibilidad de proteger a quienes están sufriendo represión. Por ello hemos creado esta herramienta, para transmitir por todos los canales posibles la demanda universal de justicia, dignidad y respeto por la vida de quienes hoy son perseguidas por militares profesionales y cuadrillas paramilitares a través de las calles de El Aaiún. Entre todas las que usemos esta herramienta podemos colaborar para exigir al Europarlamento que se pronuncie.</p>
+
+<p>Rellenando este formulario enviarás un correo a las/los representantes de tu país en el Parlamento Europeo en tu propia lengua. Por favor, hazlo con mucho respeto y claridad. El objetivo de este útil es que la europarlamentaria o el europarlamentario en cuestión,  reciba un mensaje único y escrito con tus propias palabras, sin utilizar el método "copia y pega".</p>
+
+<p>Propuestas a tener en cuenta en la redacción de tu mensaje:
+   <ul>
+       <li>Explícales brevemente con tus propias palabras lo que está sucediendo, cuéntales como te sientes y que deberían hacer en tu nombre.</li>
+       <li>Pídeles que le exijan al gobierno marroquí el cese de la violencia que está ejerciendo contra la población saharaui en los Territorios Ocupados del Sáhara Occidental.</li>
+       <li>Explícales con tus propias palabras que la ONU debe de tomar cartas en el asunto haciendo cumplir el artículo 2 de la Declaración Universal de los Derechos Humanos, así como las resoluciones adoptadas para los Territorios No Autónomos.</li>
+       <li>Explícales que deben pedir a la ONU que el Consejo de Seguridad otorgue a la MINURSO la capacidad de monitorizar los Derechos Humanos, informando directamente al Consejo de Seguridad.</li>
+       <li>Recuérdales que la ONU tiene la obligación de proteger a la población de un Territorio No Autónomo, mientras permanecen a la espera de la celebración del Referéndum de Autodeterminación, en conformidad con las Resoluciones de la Asamblea General, del Consejo de Seguridad y de la Unión Africana.</li>
+       <li>Reclama al Gobierno de Zapatero que detenga de inmediato la venta de armas al gobierno alauita, con las que el ejército de ocupación asesina, tortura y reprime al pueblo saharaui.</li>
+       <li>Pídeles que alcen la voz para permitir la entrada de civiles que puedan hacer la labor de observación internacional, al igual que libre acceso a la prensa.</li>
+       <li>Exígeles que se pronuncien ante el Parlamento Europeo, demandando la intervención de éste y del resto de la comunidad internacional.</li>
+       <li>Pídeles que exijan la liberación inmediata de las saharauis detenidas ilegalmente, hay cientos de personas desaparecidas-detenidas.</li>
+   </ul>
+</p>
