--- a/app/views/site/index.en.html.erb
+++ b/app/views/site/index.en.html.erb
@@ -1,6 +1,25 @@
 <% @title = t(:home) %>
 
 <h2><%= link_to t(:introduction), root_url %></h2>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+<p>On October 10th, over 20,000 sahrawis started a large peaceful protest to reclaim their right to work, not to be discriminated against, and the use of their natural resources, by establishing a camp of 7,000 haimas 15 km away from El Aaiún (Laayoune, capital of Western Sahara).</p>
+
+<p>30 days later, the Moroccan government sent its´ army to assault and destroy the sahrawi camp of Agdaym Iziken. 11 people were killed, 723 were injured and 159 missing, not counting civilians sent to prison, hospitals and military camps.</p>
+
+<p>At the same time, the occupying forces of Morocco have encouraged and armed settlers in the city of El Aaiún, who, together with policemen in plain clothes, broke into houses, businesses, and burnt vehicles of sahrawi citizens. Morocco's army has declared a state of martial law over the Occupied Territories of Western Sahara.</p>
+
+<p>Silence is not an option, and there is no way to stop the fair requests of the sahrawi people. On the other hand, there is an ability to protect those suffering repression. This is the reason we have created this tool; to transmit by any means the universal demand for justice, dignity and respect for the lives of those who today are persecuted by professional and paramilitary forces on the streets of El Aaiún. Together we may, using this tool, cooperate to demand that the Europarliament protest against these acts.</p>
+
+<p>By filling this form you will send an e-mail to your country's representatives in the European Parliament in your own language. Please, write with respect and clarity. The aim of this utility is to allow you to reach every MEP with a unique message written by yourself (i.e. not using "copy&amp;paste").</p>
+
+<p>Proposals to be considered in the drafting of your message:
+   <ul>
+      <li>Explain briefly with your own words what is happening, tell them how you feel and what they should do on your behalf.</li>
+      <li>Ask them to demand that the Moroccan government to cease using violence against the Sahrawi population in the Occupied Territories of Western Sahara.</li>
+      <li>Tell them in your own words that the UN must take action by enforcing Article 2 of the Universal Declaration of Human Rights, as well as the resolutions adopted for the non-self-governing Territories of the Sahara.</li>
+      <li>Explain to them that they should ask the UN to have the Security Council grant MINURSO the ability to monitor Humans Rights, reporting directly to the UN Security Council.</li>
+      <li>Remind them that the UN has an obligation to protect the population of non-self-governing Territories whilst they await a referendum on self-determination, in accordance with the resolutions of the UN General Assembly, UN Security Council and the African Union.</li>
+      <li>Ask them to raise their voices, to allow civilians to act as human rights observers as well as free access to the press.</li>
+      <li>Demand that they stand in front of the European Parliament and ask for it to intervene in the conflict, as well as asking the same of the international community.</li>
+      <li>Ask them to demand the immediate release of illegally detained Sahrawi; there are hundreds of people reported missing or arrested.</li>
+   </ul>
+</p>
