--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <li><a href="<%= url_for :locale => 'es' %>">Español</a></li>
         <li><a href="<%= url_for :locale => 'en' %>">English</a></li>
         <li><a href="<%= url_for :locale => 'fr' %>">Français</a></li>
+        <li><a href="<%= url_for :locale => 'gr' %>">Ελληνικά</a></li>
       </ul>
       <h1><a href="/"><%= APP_CONFIG[:project_name] %></a></h1>
     </div><!-- header -->
