--- a/app/views/pages/integrate.en.html.erb
+++ b/app/views/pages/integrate.en.html.erb
@@ -2,8 +2,6 @@
 
 <h2><%= link_to t(:integrate_the_form_in_your_website), integrate_path %></h2>
 
-<p>Embed this form into your website</p>
-
 <p>Your website can actively participate: be a part of the net of blogs and
 websites that ask for sending emails to stop the massacre that is being
 held in the Sahara.</p>
@@ -11,7 +9,7 @@ held in the Sahara.</p>
 <p>If you want to embed this form into your website, just create a new
 entry in your blog (Wordpress, Drupal, SPIP or any other) explaining the
 campaign. Then copy the following 
-<a href="/resources/htmlformes.txt">HTML code</a> in this new entry (take into
+<a href="/resources/htmlformen.txt">HTML code</a> in this new entry (take into
 account that you might need to enable "full html" code). It is important
 to ask for politeness and clarity in their messages (they are sent from
 the user's own email address) in order to increase their effectiveness.
