Added integrate in greek

--- a/app/views/pages/integrate.gr.html.erb
+++ b/app/views/pages/integrate.gr.html.erb
@@ -2,3 +2,17 @@
 
 <h2><%= link_to t(:integrate_the_form_in_your_website), integrate_path %></h2>
 
+<p>Ενσωματώστε αυτήν τη φόρμα στην ιστοσελίδα σας</p>
+
+<p>Η ιστοσελίδα σας μπορεί να συμμετάσχει ενεργά: Γίνετε μέλος του
+δικτύου των blogs και σελίδων που προωθούν την αποστολή ηλεκτρονικών
+μηνυμάτων για την πάυση της σφαγής στη Σαχάρα.</p>
+
+<p>Εάν θέλετε να ενσωματώσετε αυτή την φόρμα στην σελίδα σας, απλά
+δημιουργήστε μια νέα ανάρτηση στο blog σας (Wordpress, Drupal, SPIP ή
+άλλο) εξηγώντας την καμπάνια. Ύστερα αντιγράψτε την ακόλουθο HTML
+κώδικα στην ανάρτηση (υπόψιν ότι ίσως χρειάζεται να ενεργοποιήσετε
+το"full html"). Είναι σημαντικό να κρατηθεί ευπρέπεια και σαφήνεια στα
+μηνύματα (αν και η αποστολή γίνεται από την διεύθυνση του χρήστη) ώστε
+να είναι ποιό αποτελεσματικά. Παρακαλώ κρατήστε την ανάρτηση ορατή
+κατα την διάρκεια της καμπάνιας.</p>
