texto en blanco

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -155,6 +155,11 @@ p.news .more {
 	background:url(../images/content.jpg) top right no-repeat;
 	font-size:120%;
 	padding:20px;
+  color: #fff;
+}
+
+#content a {
+  color: #df3d6e;
 }
 
 #content h1,h2,h3,h4,h5,p,ul,ol,blockquote {
