enlace al formulario

--- a/app/views/site/index.es.html.erb
+++ b/app/views/site/index.es.html.erb
@@ -7,7 +7,7 @@
 
 <p>No existe la opción del silencio como no existe la posibilidad de parar las justas demandas del pueblo saharaui. Lo que sí existe es la posibilidad de proteger a quienes están sufriendo represión. Por ello hemos creado esta herramienta, para transmitir por todos los canales posibles la demanda universal de justicia, dignidad y respeto por la vida de quienes hoy son perseguidas por militares profesionales y cuadrillas paramilitares a través de las calles de El Aaiún. Entre todas las que usemos esta herramienta podemos colaborar para exigir al Europarlamento que se pronuncie.</p>
 
-<p>Rellenando este formulario enviarás un correo a las/los representantes de tu país en el Parlamento Europeo en tu propia lengua. Por favor, hazlo con mucho respeto y claridad. El objetivo de este útil es que la europarlamentaria o el europarlamentario en cuestión,  reciba un mensaje único y escrito con tus propias palabras, sin utilizar el método "copia y pega".</p>
+<p><%= link_to "Rellenando este formulario", message_path %> enviarás un correo a las/los representantes de tu país en el Parlamento Europeo en tu propia lengua. Por favor, hazlo con mucho respeto y claridad. El objetivo de este útil es que la europarlamentaria o el europarlamentario en cuestión,  reciba un mensaje único y escrito con tus propias palabras, sin utilizar el método "copia y pega".</p>
 
 <p>Propuestas a tener en cuenta en la redacción de tu mensaje:
    <ul>
