--- a/app/views/site/index.fr.html.erb
+++ b/app/views/site/index.fr.html.erb
@@ -8,7 +8,7 @@
 
 <p>Il n'existe aucune option de silence comme il n'existe aucune  possibilité d'arrêter les justes revendications du peuple sahraoui. Ce  qui existe est la capacité de protéger ceux qui sont victimes de la  répression. Nous avons donc créé cet outil pour transmettre par tous les  moyens possibles la demande universel de la justice, la dignité et le  respect de la vie de ceux qui, aujourd'hui, sont persécutés par les  gangs professionnels militaires et paramilitaires dans les rues de  Laayoune. Parmi tous qui utilisons cet outil pouvons travailler ensemble  à demander le Parlement européen de se prononcer.</p>
 
-<p>Remplisant ce formulaire enverras un courriel à l'/ les représentants de  votre pays au Parlement européen dans votre propre langue. S'il vous  plaît faire-le avec respect et clarté. Le but de cette utile est que le  député ou la députée en question, de recevoir un message écrit dans vos  propres mots, sans utiliser le "copier-coller."</p>
+<p><%= link_to "Remplisant ce formulaire", message_path %> enverras un courriel à l'/ les représentants de  votre pays au Parlement européen dans votre propre langue. S'il vous  plaît faire-le avec respect et clarté. Le but de cette utile est que le  député ou la députée en question, de recevoir un message écrit dans vos  propres mots, sans utiliser le "copier-coller."</p>
 
 <p>Les propositions à prendre en considération dans la rédaction de votre message:
    <ul>
