--- a/app/views/site/index.en.html.erb
+++ b/app/views/site/index.en.html.erb
@@ -9,7 +9,7 @@
 
 <p>Silence is not an option, and there is no way to stop the fair requests of the sahrawi people. On the other hand, there is an ability to protect those suffering repression. This is the reason we have created this tool; to transmit by any means the universal demand for justice, dignity and respect for the lives of those who today are persecuted by professional and paramilitary forces on the streets of El Aaiún. Together we may, using this tool, cooperate to demand that the Europarliament protest against these acts.</p>
 
-<p>By filling this form you will send an e-mail to your country's representatives in the European Parliament in your own language. Please, write with respect and clarity. The aim of this utility is to allow you to reach every MEP with a unique message written by yourself (i.e. not using "copy&amp;paste").</p>
+<p><%= link_to "By filling this form", message_path %> you will send an e-mail to your country's representatives in the European Parliament in your own language. Please, write with respect and clarity. The aim of this utility is to allow you to reach every MEP with a unique message written by yourself (i.e. not using "copy&amp;paste").</p>
 
 <p>Proposals to be considered in the drafting of your message:
    <ul>
