Added link to form

--- a/app/views/site/index.gr.html.erb
+++ b/app/views/site/index.gr.html.erb
@@ -9,7 +9,7 @@
 
 <p>Η σιωπή δεν αποτελεί επιλογή, και τίποτε δεν μπορεί να σταματήσει τα δίκαια αιτήματα του λαού των Σαχράουι. Υπάρχει η δυνατότητα για την προστασία αυτών που υποφέρουν από την καταστολή. Αυτός είναι ο λόγος που δημιουργήσαμε αυτό το εργαλείο: να μεταδόσουμε με κάθε μέσο την καθολική απαίτηση για δικαιοσύνη, αξιοπρέπεια και σεβασμό για τις ζωές αυτών που σήμερα διώκονται από τις επαγγελματικές και τις παραστρατιωτικές δυνάμεις στους δρόμους του Ελ Αγιούν. Μαζί μπορούμε, με τη χρήση αυτού του εργαλείου, να συνεργάστούμε και να απαιτήσουμε από την Ευρωβουλή να διαμαρτυριθεί ενάντια σε αυτές τις πράξεις.</p>
 
-<p>Συμπληρώνοντας αυτή τη φόρμα θα στείλετε ένα e-mail στους εκπροσώπους της χώρας σας στο Ευρωπαϊκό Κοινοβούλιο, στη δική σας γλώσσα. Παρακαλώ, γράψτε με σεβασμό και σαφήνεια. Ο σκοπός αυτού του προγράμματος είναι να σας βοηθήσει να στείλετε ένα προσωπικό μήνυμα σε κάθε βουλευτή (χωρίς να χρησιμοποιηθεί "copy & paste").</p>
+<p><%= link_to "Συμπληρώνοντας αυτή τη φόρμα", message_path %> θα στείλετε ένα e-mail στους εκπροσώπους της χώρας σας στο Ευρωπαϊκό Κοινοβούλιο, στη δική σας γλώσσα. Παρακαλώ, γράψτε με σεβασμό και σαφήνεια. Ο σκοπός αυτού του προγράμματος είναι να σας βοηθήσει να στείλετε ένα προσωπικό μήνυμα σε κάθε βουλευτή (χωρίς να χρησιμοποιηθεί "copy & paste").</p>
 
 <p>Στοιχεια που πρέπει να ληφθόυν υπόψιν κατά τη σύνταξη του μηνύματός σας:
    <ul>
