--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -299,7 +299,7 @@ p.user {
 }
 
 #flash_notice, #flash_error {
-  margin: 10px 0;
+  margin: 10px 0 0 30px;
   border: 2px solid black;
   padding: 10px;
   width: 75%;
