Add intro in English to form

--- a/app/views/message/_message_intro.en.html.erb
+++ b/app/views/message/_message_intro.en.html.erb
@@ -1,1 +1,6 @@
-<p id="message_intro">Rellenando el siguiente formulario puedes enviar un mensaje a todos tus representantes en el Europarlamento, pídeles que exijan al gobierno marroquí el cese de la violencia contra la población saharaui además de <%= link_to "tus demandas", root_url %>. Escríbeles lo que consideres oportuno pero sé respetuoso, solo de esta manera nuestras peticiones serán escuchadas.</p>
+<p id="message_intro">
+By filling this form you will send an e-mail, in your own language, to
+all of your country's representatives in the European Parliament. Ask them to require the
+Moroccan government the cessation of all kind of violence against the
+Sahrawi population, and <%= link_to "your own demands", root_url %>.
+Please be polite in order to get your petitions heard.</p>
