More french translation

--- a/app/views/message/_message_intro.fr.html.erb
+++ b/app/views/message/_message_intro.fr.html.erb
@@ -1,6 +1,4 @@
 <p id="message_intro">
-By filling this form you will send an e-mail, in your own language, to
-all of your country's representatives in the European Parliament. Ask them to require the
-Moroccan government the cessation of all kind of violence against the
-Sahrawi population, and <%= link_to "your own demands", root_url %>.
-Please be polite in order to get your petitions heard.</p>
+En remplissant ce formulaire vous envoyez un message à tout vos représentants au parlement européen afin de leur demander qu'ils exigent au
+gouvernement marocain de cesser la violence contre la population saharaui et qu'ils prennent en considération <%= link_to "vos autres demandes", root_url %> politiques concernant le conflit saharaui.
+Vous pouvez leur écrire ce que vous considérez opportun mais restez respectueux, seulement ainsi nos pétitions pourront être entendues.</p>
