Added forms for da and gr, and integration in french

--- a/app/views/pages/integrate.gr.html.erb
+++ b/app/views/pages/integrate.gr.html.erb
@@ -10,7 +10,7 @@
 
 <p>Εάν θέλετε να ενσωματώσετε αυτή την φόρμα στην σελίδα σας, απλά
 δημιουργήστε μια νέα ανάρτηση στο blog σας (Wordpress, Drupal, SPIP ή
-άλλο) εξηγώντας την καμπάνια. Ύστερα αντιγράψτε την <a href="/resources/htmlformen.txt">ακόλουθο HTML</a>
+άλλο) εξηγώντας την καμπάνια. Ύστερα αντιγράψτε την <a href="/resources/htmlformgr.txt">ακόλουθο HTML</a>
 κώδικα στην ανάρτηση (υπόψιν ότι ίσως χρειάζεται να ενεργοποιήσετε
 το"full html"). Είναι σημαντικό να κρατηθεί ευπρέπεια και σαφήνεια στα
 μηνύματα (αν και η αποστολή γίνεται από την διεύθυνση του χρήστη) ώστε
