--- a/app/views/message/_message_intro.da.html.erb
+++ b/app/views/message/_message_intro.da.html.erb
@@ -1,6 +1,6 @@
-<p id="message_intro">
-By filling this form you will send an e-mail, in your own language, to
-all of your country's representatives in the European Parliament. Ask them to require the
-Moroccan government the cessation of all kind of violence against the
-Sahrawi population, and <%= link_to "your own demands", root_url %>.
-Please be polite in order to get your petitions heard.</p>
+<p id="message_intro">Ved at udfylde denne formular, sender du en email på dit eget sprog
+til alle dit lands repræsentanter i Europaparlamentet. Bed dem om at
+kræve, at den marokanske regering stopper al vold mod
+saharawi-befolkningen - og tilføj <%= link_to "dine egne krav", root_url %>. 
+Vær høflig, så dit brev bliver hørt.</p>
+
