Util suena raro, mejor herramienta

--- a/app/views/site/index.es.html.erb
+++ b/app/views/site/index.es.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><%= link_to "Rellenando este formulario", message_path %> enviarás un correo a las/los representantes de tu país en el Parlamento Europeo en tu propia lengua. Por favor, hazlo con mucho respeto y claridad. El objetivo de este útil es que la europarlamentaria o el europarlamentario en cuestión,  reciba un mensaje único y escrito con tus propias palabras, sin utilizar el método "copia y pega".</p>
+<p><%= link_to "Rellenando este formulario", message_path %> enviarás un correo a las/los representantes de tu país en el Parlamento Europeo en tu propia lengua. Por favor, hazlo con mucho respeto y claridad. El objetivo de esta herramienta es que la europarlamentaria o el europarlamentario en cuestión,  reciba un mensaje único y escrito con tus propias palabras, sin utilizar el método "copia y pega".</p>
 
 <p>El día diez de octubre comenzó una gran protesta pacífica, en la que más de 20.000 saharauis reivindicaban su derecho al trabajo, a la no discriminación y al usufructo de sus recursos naturales, estableciendo un campamento de 7000 haimas a 15 kilómetros de la ciudad de El Aaiún. 30 días después el gobierno de Marruecos ordenó a su ejército  el asalto y la destrucción del campamento saharaui de Agdaym Iziken. Ha habido 11 personas muertas, 723 heridas y 159 desaparecidas, sin contar a quienes se encuentran en los cuarteles militares o la cárcel, ni en los hospitales.</p>
 
