--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
     <div id="header">
       <!-- <h1 class="right"><%= APP_CONFIG[:project_name] %></h1> -->
       <ul class="right">
+        <li><a href="<%= url_for :locale => 'cat' %>">Català</a></li>
         <li><a href="<%= url_for :locale => 'da' %>">Dansk</a></li>
         <li><a href="<%= url_for :locale => 'es' %>">Español</a></li>
         <li><a href="<%= url_for :locale => 'en' %>">English</a></li>
