Added image in front page

--- a/app/views/site/index.da.html.erb
+++ b/app/views/site/index.da.html.erb
@@ -2,7 +2,8 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><%= link_to "Ved at udfylde denne formular", message_path %>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" />
+<%= link_to "Ved at udfylde denne formular", message_path %>
 kan du sende en email på dit sprog til
 dit lands repræsentanter i  Europaparlamentet. Skriv tydeligt og vær
 venlig og respektfuld. Formålet er at lade dig få kontakt til alle
