--- a/app/views/site/index.en.html.erb
+++ b/app/views/site/index.en.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><%= link_to "By filling this form", message_path %> you will send an e-mail to your country's representatives in the European Parliament in your own language. Please, write with respect and clarity. The aim of this utility is to allow you to reach every MEP with a unique message written by yourself (i.e. not using "copy&amp;paste").</p>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "By filling this form", message_path %> you will send an e-mail to your country's representatives in the European Parliament in your own language. Please, write with respect and clarity. The aim of this utility is to allow you to reach every MEP with a unique message written by yourself (i.e. not using "copy&amp;paste").</p>
 
 <p>On October 10th, over 20,000 sahrawis started a large peaceful protest to reclaim their right to work, not to be discriminated against, and the use of their natural resources, by establishing a camp of 7,000 haimas 15 km away from El Aaiún (Laayoune, capital of Western Sahara).</p>
 
