--- a/app/views/site/index.gr.html.erb
+++ b/app/views/site/index.gr.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><%= link_to "Συμπληρώνοντας αυτή τη φόρμα", message_path %> θα στείλετε ένα e-mail στους εκπροσώπους της χώρας σας στο Ευρωπαϊκό Κοινοβούλιο, στη δική σας γλώσσα. Παρακαλώ, γράψτε με σεβασμό και σαφήνεια. Ο σκοπός αυτού του προγράμματος είναι να σας βοηθήσει να στείλετε ένα προσωπικό μήνυμα σε κάθε βουλευτή (χωρίς να χρησιμοποιηθεί "copy & paste").</p>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "Συμπληρώνοντας αυτή τη φόρμα", message_path %> θα στείλετε ένα e-mail στους εκπροσώπους της χώρας σας στο Ευρωπαϊκό Κοινοβούλιο, στη δική σας γλώσσα. Παρακαλώ, γράψτε με σεβασμό και σαφήνεια. Ο σκοπός αυτού του προγράμματος είναι να σας βοηθήσει να στείλετε ένα προσωπικό μήνυμα σε κάθε βουλευτή (χωρίς να χρησιμοποιηθεί "copy & paste").</p>
 
 <p>Στις 10 Οκτωβρίου, πάνω από 20.000 σαχράουϊ ξεκίνησαν μια μεγάλη ειρηνική διαμαρτυρία για να διεκδικήσουν το δικαίωμά τους στην εργασία, να μην υφίστανται διακρίσεις, καθώς και το δικαίωμα στη χρήση των φυσικών πόρων τους, με τη δημιουργία ενός στρατοπέδου των 5.000 haimas 15 χιλιόμετρα μακριά από το Ελ Αγιούν (Laayoune, πρωτεύουσα της Δυτικής Σαχάρας).</p>
 
