--- a/app/views/site/index.fr.html.erb
+++ b/app/views/site/index.fr.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><%= link_to "Remplisant ce formulaire", message_path %> enverras un courriel à l'/ les représentants de  votre pays au Parlement européen dans votre propre langue. S'il vous  plaît faire-le avec respect et clarté. Le but de cette utile est que le  député ou la députée en question, de recevoir un message écrit dans vos  propres mots, sans utiliser le "copier-coller."</p>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "Remplisant ce formulaire", message_path %> enverras un courriel à l'/ les représentants de  votre pays au Parlement européen dans votre propre langue. S'il vous  plaît faire-le avec respect et clarté. Le but de cette utile est que le  député ou la députée en question, de recevoir un message écrit dans vos  propres mots, sans utiliser le "copier-coller."</p>
 
 <p>Le 10 Octobre une grande protestation pacifique a commencé, dans  laquelle plus de 20.000 sahraouis fait valoir leur droit au travail, à  la non-discrimination et l'utilisation de ses ressources naturelles et  avec l'établissement d'un camp Haimas 7000 à 15 kilomètres de la ville  de Laayoune.
 30 jours après le gouvernement marocain a ordonné l'assaut de l'armée et  la destruction des Iziko Agdaym sahraoui camp. Il ya eu 28 personnes  tuées, 723 blessés et 159 disparus, sans compter ceux de la caserne  militaire ou de prison, ou dans les hôpitaux.</p>
