message in greek

--- a/app/views/message/_message_intro.gr.html.erb
+++ b/app/views/message/_message_intro.gr.html.erb
@@ -1,6 +1,4 @@
 <p id="message_intro">
-By filling this form you will send an e-mail, in your own language, to
-all of your country's representatives in the European Parliament. Ask them to require the
-Moroccan government the cessation of all kind of violence against the
-Sahrawi population, and <%= link_to "your own demands", root_url %>.
-Please be polite in order to get your petitions heard.</p>
+Συμπληρώνοντας αυτήν τη φόρμα θα στείλετε ένα ηλεκτρονικό μήνυμα, στην γλώσσα σας, σε όλους τους εκπρωσώπους της χώρας σας στο  ευρωπαικό κοινοβούλιο.
+Ζητήστε από αυτούς να απαιτήσουν από τηνΜαροκινή κυβέρνηση την κατάπαυση κάθε είδους βίας ενάντια στονπληθυσμό της Δυτικής Σαχάρας με <%= link_to "τις δικές σας  α
+αιτιάσεις", root_url %>. Παρακαλούμε να είστε ευγενείς ώστε ναγίνουν δεκτά τα αιτήματά σας.</p>
