Suggest writing in Castilian at the Catalan page Signed-off-by: Quique <quique@sindominio.net>

--- a/app/views/site/index.cat.html.erb
+++ b/app/views/site/index.cat.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "Omplint aquest formulari", message_path %> enviaràs un correu a les/els representants del teu país al Parlament Europeu en la teva pròpia llengua. Si us plau, fes-ho amb molt respecte i claredat. L'objectiu d'aquesta eina és que l'europarlamentària o l'europarlamentari en qüestió, rebi un missatge únic i escrit amb les teves pròpies paraules, sense utilitzar el mètode "còpia i enganxa".</p>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "Omplint aquest formulari", message_path %> enviaràs un correu a les/els representants del teu estat al Parlament Europeu (et recomanem fer-ho a castellà per a una major efectivitat). Si us plau, fes-ho amb molt respecte i claredat. L'objectiu d'aquesta eina és que l'europarlamentària o l'europarlamentari en qüestió, rebi un missatge únic i escrit amb les teves pròpies paraules, sense utilitzar el mètode "còpia i enganxa".</p>
 
 <p>El dia deu d'octubre va començar una gran protesta pacífica, en la qual més de 20.000 sahrauís reivindicaven el seu dret al treball, a la no discriminació i a l'usdefruit dels seus recursos naturals, establint un campament de 7000 haimas a 15 quilòmetres de la ciutat de l'Aaiún. 30 dies després el govern del Marroc va ordenar al seu exèrcit l'assalt i la destrucció del campament sahrauí de Agdaym Iziken. Hi ha hagut 28 persones mortes, 723 ferides i 159 desaparegudes, sense comptar els qui es troben en les casernes militars o la presó, ni als hospitals.</p>
 
