--- a/app/views/mailman/send_activation_code.es.text.erb
+++ b/app/views/mailman/send_activation_code.es.text.erb
@@ -1,4 +1,4 @@
-Para enviar tu mensaje a los europarlamentarios tienes que activarlo accediendo a la siguiente dirección:
+Alguien (probablemente tú) has solicitado el envio de un email a los miembros del Parlamento Europeo. Por favor, confirmalo siguiendo este enlace:
 
 <%= "http://#{APP_CONFIG[:domain]}/activate/#{@activation_code}" %>
 
