--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -315,7 +315,7 @@ p.user {
   color: white;
 }
 
-.field_with_errors input, .field_with_errors textarea {
+.field_with_errors input, .field_with_errors textarea, .field_with_errors select {
   border: 2px solid red;
 }
 
