Translation to german.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       <ul class="right">
         <li><a href="<%= url_for :locale => 'cat' %>">Català</a></li>
         <li><a href="<%= url_for :locale => 'da' %>">Dansk</a></li>
+        <li><a href="<%= url_for :locale => 'de' %>">Deutsch</a></li>
         <li><a href="<%= url_for :locale => 'es' %>">Español</a></li>
         <li><a href="<%= url_for :locale => 'en' %>">English</a></li>
         <li><a href="<%= url_for :locale => 'fr' %>">Français</a></li>
