Stats in french

--- a/app/views/site/index.de.html.erb
+++ b/app/views/site/index.de.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "Durch das AusfŸllung dieses Formulars", message_path %>, schicken Sie eine E-Mail an Ihrem Land Vertreter im EuropŠischen Parlament in Ihrer eigenen Sprache. Bitte schreiben Sie mit Respekt und Klarheit. Das Ziel dieses Programm ist jeder Abgeordnete mit einer einzigartigen Nachricht selbst geschrieben zu erreichen (also nicht mit "Copy & Paste").</p>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "Durch das AusfŸllung dieses Formulars", message_path %>, schicken Sie eine E-Mail an Ihrem Land Vertreter im EuropŠischen Parlament in Ihrer eigenen Sprache. Bitte schreiben Sie mit Respekt und Klarheit. Das Ziel dieses Programm ist jeder Abgeordnete mit einer einzigartigen Nachricht selbst geschrieben zu erreichen (also nicht mit "Copy &amp; Paste").</p>
 
 <p>Am 10. Oktober begann Ÿber 20.000 Sahrauis eine gro§e friedlichen Protest fŸr ihrem Recht auf Arbeit nicht diskriminiert zu werden, und die Nutzung ihrer natŸrlichen Ressourcen zurŸckzugewinnen durch die Errichtung eines Lagers von 7000 haimas 15 km von El Aaiœn (Laayoune, Kapital der Westsahara).</p>
 
