--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,22 @@
       <li><%= link_to t(:integration), integrate_path %></li>
       <li><%= link_to t(:stats), stats_path %></li>
     </ul>
+    <ul class="nav_right">
+      <li>
+        <!-- AddThis Button BEGIN -->
+          <div class="addthis_toolbox addthis_default_style">
+            <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+            <a class="addthis_button_tweet"></a>
+          </div>
+          <script type="text/javascript">
+            var addthis_config = {"data_track_clickback":true};
+          </script>
+          <script type="text/javascript"
+            src="http://s7.addthis.com/js/250/addthis_widget.js#username=isaachacksimov">
+          </script>
+        <!-- AddThis Button END -->
+      </li>
+    </ul>
     <div class="clear" />
     <div id="content">
       <%= yield %>
