Fixed encoding for german

--- a/app/views/message/_message_intro.de.html.erb
+++ b/app/views/message/_message_intro.de.html.erb
@@ -1,2 +1,6 @@
-<p id="message_intro">Durch die AusfŸllung dieses Formulars schicken Sie eine E-Mail, in Ihrer eigenen Sprache, an alle in Ihrem Land Vertreter im EuropŠischen Parlament. Bitten Sie, die marokkanische Regierung die Einstellung aller Art von Gewalt gegen die saharauischen Bevšlkerung zu nehmen und <%= link_to "eigene AnsprŸche", root_url %>. Bitte seien Sie hšflich um Ihre Petitionen erhalten zu hšren.</p>
+<p id="message_intro">Durch die Ausfüllung dieses Formulars schicken Sie eine E-Mail, in Ihrer
+eigenen Sprache, an alle in Ihrem Land Vertreter im Europäischen Parlament.
+Bitten Sie, die marokkanische Regierung die Einstellung aller Art von Gewalt
+gegen die saharauischen Bevölkerung zu nehmen und <%= link_to "eigene Ansprüche", root_url %>. Bitte seien
+Sie höflich um Ihre Petitionen erhalten zu hören.</p>
 
