--- a/app/views/site/index.de.html.erb
+++ b/app/views/site/index.de.html.erb
@@ -2,25 +2,64 @@
 
 <h2><%= link_to t(:introduction), root_url %></h2>
 
-<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" /><%= link_to "Durch das AusfŸllung dieses Formulars", message_path %>, schicken Sie eine E-Mail an Ihrem Land Vertreter im EuropŠischen Parlament in Ihrer eigenen Sprache. Bitte schreiben Sie mit Respekt und Klarheit. Das Ziel dieses Programm ist jeder Abgeordnete mit einer einzigartigen Nachricht selbst geschrieben zu erreichen (also nicht mit "Copy &amp; Paste").</p>
+<p><img style="float: right;padding:10px;" src="/images/sahara.png" alt="UE sahara" width="350" />
+<%= link_to "Durch das Ausfüllung dieses Formulars", message_path %>, schicken Sie eine E-Mail an Ihrem Land
+Vertreter im Europäischen Parlament in Ihrer eigenen Sprache. Bitte schreiben
+Sie mit Respekt und Klarheit. Das Ziel dieses Programm ist jeder Abgeordnete
+mit einer einzigartigen Nachricht selbst geschrieben zu erreichen (also nicht
+mit "Copy &amp; Paste").</p>
 
-<p>Am 10. Oktober begann Ÿber 20.000 Sahrauis eine gro§e friedlichen Protest fŸr ihrem Recht auf Arbeit nicht diskriminiert zu werden, und die Nutzung ihrer natŸrlichen Ressourcen zurŸckzugewinnen durch die Errichtung eines Lagers von 7000 haimas 15 km von El Aaiœn (Laayoune, Kapital der Westsahara).</p>
+<p>Am 10. Oktober begann über 20.000 Sahrauis eine große friedlichen Protest für
+ihrem Recht auf Arbeit nicht diskriminiert zu werden, und die Nutzung ihrer
+natürlichen Ressourcen zurückzugewinnen durch die Errichtung eines Lagers von
+7000 haimas 15 km von El Aaiún (Laayoune, Kapital der Westsahara).</p>
 
-<p>30 Tage spŠter schickte der marokkanischen Regierung seine Armee den saharauischen Lager Agdaym Iziken anzugreifen und zu vernichten. 28 Menschen wurden getštet, 723 wurden verletzt und 159 fehlen nicht mitgerechnet Zivilisten ins GefŠngnis, KrankenhŠusern und MilitŠrlagern geschickt.</p>
+<p>30 Tage später schickte der marokkanischen Regierung seine Armee den
+saharauischen Lager Agdaym Iziken anzugreifen und zu vernichten. 28 Menschen
+wurden getötet, 723 wurden verletzt und 159 fehlen nicht mitgerechnet
+Zivilisten ins Gefängnis, Krankenhäusern und Militärlagern geschickt.</p>
 
-<p>Gleichzeitig haben die Besatzungstruppen von Marokko Siedler in der Stadt El Aaiœn gefšrdert und bewaffnet, die gemeinsam mit Polizisten in Zivil, in HŠuser brach und GeschŠfte und Fahrzeuge der saharauischen BŸrger verbrannte. Die Marokko Armee hat einen Zustand des Kriegsrechts in den besetzten Gebieten der Westsahara erklŠrte.</p>
+<p>Gleichzeitig haben die Besatzungstruppen von Marokko Siedler in der Stadt El
+Aaiún gefördert und bewaffnet, die gemeinsam mit Polizisten in Zivil, in Häuser
+brach und Geschäfte und Fahrzeuge der saharauischen Bürger verbrannte. Die
+Marokko Armee hat einen Zustand des Kriegsrechts in den besetzten Gebieten der
+Westsahara erklärte.</p>
 
-<p>Schweigen ist keine Option, und es gibt keinen Weg der Zugriffe des Volkes des Westsaharas zu stoppen. Auf der anderen Seite gibt es eine Mšglichkeit die, die unter UnterdrŸckung leben, von Leiden zu schŸtzen. Dies ist der Grund, warum wir dieses Tool erstellt haben, zu Ÿbertragen durch alle Mšglichkeiten, die allgemeine Forderung nach Gerechtigkeit, WŸrde und Respekt fŸr das Leben derer, die heute von professionellen und paramilitŠrischen KrŠfte auf den Stra§en von El Aaiœn verfolgt sind. Gemeinsam kšnnen wir, mit diesem Tool, zu verlangen arbeiten, damit dem Europaparlament gegen diese Handlungen protestiert.</p>
+<p>Schweigen ist keine Option, und es gibt keinen Weg der Zugriffe des Volkes des
+Westsaharas zu stoppen. Auf der anderen Seite gibt es eine Möglichkeit die, die
+unter Unterdrückung leben, von Leiden zu schützen. Dies ist der Grund, warum
+wir dieses Tool erstellt haben, zu übertragen durch alle Möglichkeiten, die
+allgemeine Forderung nach Gerechtigkeit, Würde und Respekt für das Leben derer,
+die heute von professionellen und paramilitärischen Kräfte auf den Straßen von
+El Aaiún verfolgt sind. Gemeinsam können wir, mit diesem Tool, zu verlangen
+arbeiten, damit dem Europaparlament gegen diese Handlungen protestiert.</p>
 
-<p>VorschlŠge bei der Ausarbeitung Ihrer Nachricht zu betrachten sind:
+<p>Vorschläge bei der Ausarbeitung Ihrer Nachricht zu betrachten sind:
    <ul>
-      <li>ErklŠren Sie kurz mit eigenen Worten, was passiert, sagen Sie ihnen, wie Sie sich fŸhlen und was sie in Ihrem Namen machen sollen.</li>
-      <li>Fordern Sie sie auf Nachfrage, dass die marokkanische Regierung mit Gewalt gegen die saharauischen Bevšlkerung in den besetzten Gebieten der Westsahara aufhšrt.</li>
-      <li>Sagen Sie ihnen, in Ihren eigenen Worten, dass die UN Ma§nahmen der Durchsetzung von Artikel 2 der Allgemeinen ErklŠrung der Menschenrechte sowie die BeschlŸsse fŸr die nicht-selbstverwalteten Gebiete der Sahara erlassen auferlegen muss.</li>
-      <li>ErklŠren Sie ihnen, sie sollten die UN zu bitten, den Sicherheitsrat MINURSO die FŠhigkeit zu gewŠhren, Menschen Rechte zu Ÿberwachen und berichtet direkt an den UN-Sicherheitsrat zu haben.</li>
-      <li>Erinnern Sie sie, dass die UN eine Verpflichtung, der Bevšlkerung von nicht-selbstverwalteten Gebiete, wŠhrend sie auf ein Referendum Ÿber die Selbstbestimmung warten, in †bereinstimmung mit den Resolutionen des UN-Generalversammlung, Sicherheitsrat der Vereinten Nationen und der Afrikanischen Union, zu schŸtzen habt.</li>
-      <li>Bitten Sie sie, ihre Stimme zu erheben, um die Zivilisten als Menschenrechtsbeobachter sowie freien Zugang zum Pressebereich zu handeln.</li>
-      <li>Verlangen, dass sie vor dem EuropŠischen Parlament standen und darum bitten, ihnen in den Konflikt einzugreifen, sowie immer wieder die gleichen von der internationalen Gemeinschaft.</li>
-      <li>Bitten Sie sie, die sofortige Freilassung der rechtswidrig festgehaltenen saharauischen. Es gibt Hunderte von Menschen als vermisst gemeldet oder verhaftet.</li>
+      <li>Erklären Sie kurz mit eigenen Worten, was passiert, sagen Sie ihnen, wie
+          Sie sich fühlen und was sie in Ihrem Namen machen sollen.</li>
+      <li>Fordern Sie sie auf Nachfrage, dass die marokkanische Regierung mit
+          Gewalt gegen die saharauischen Bevölkerung in den besetzten Gebieten der
+          Westsahara aufhört.</li>
+      <li>Sagen Sie ihnen, in Ihren eigenen Worten, dass die UN Maßnahmen der
+          Durchsetzung von Artikel 2 der Allgemeinen Erklärung der Menschenrechte sowie
+          die Beschlüsse für die nicht-selbstverwalteten Gebiete der Sahara erlassen
+          auferlegen muss.</li>
+      <li>Erklären Sie ihnen, sie sollten die UN zu bitten, den Sicherheitsrat
+          MINURSO die Fähigkeit zu gewähren, Menschen Rechte zu überwachen und berichtet
+          direkt an den UN-Sicherheitsrat zu haben.</li>
+      <li>Erinnern Sie sie, dass die UN eine Verpflichtung, der Bevölkerung von
+          nicht-selbstverwalteten Gebiete, während sie auf ein Referendum über die
+          Selbstbestimmung warten, in Übereinstimmung mit den Resolutionen des
+          UN-Generalversammlung, Sicherheitsrat der Vereinten Nationen und der
+          Afrikanischen Union, zu schützen habt.</li>
+      <li>Bitten Sie sie, ihre Stimme zu erheben, um die Zivilisten als
+          Menschenrechtsbeobachter sowie freien Zugang zum Pressebereich zu handeln.</li>
+      <li>Verlangen, dass sie vor dem Europäischen Parlament standen und darum
+          bitten, ihnen in den Konflikt einzugreifen, sowie immer wieder die gleichen von
+          der internationalen Gemeinschaft.</li>
+      <li>Bitten Sie sie, die sofortige Freilassung der rechtswidrig festgehaltenen
+          saharauischen. Es gibt Hunderte von Menschen als vermisst gemeldet oder
+          verhaftet.</li>
    </ul>
 </p>
